--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</header>
 						<p>Game Designer and 3D/2D Artist</p>
 						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a> 
+						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 
 					</div>
 				</div>
@@ -61,7 +61,7 @@
 
 
 
-		<!-- Portfolio -->
+		<!-- Portfolio ART -->
 		<article id="portfolio" class="wrapper style3">
 			<div class="container">
 				<header>
@@ -380,6 +380,86 @@
 			</div>
 		</article>
 
+		<!-- Portfolio GAME DESIGN -->
+		<article id="gamedesign" class="wrapper style3">
+			<div class="container">
+				<header>
+					<h2>Game Design</h2>
+					<p>
+						I'm thrilled to present a selection of my featured Game Design projects that I'm able to share in my portfolio.
+						Even though I worked on the Game Design of most of the games mentioned above, I didn't produce a GDD for each one of them.
+						Additionally, I've worked on some Game Design Documents (GDDs) for my clients under non-disclosure agreements (NDAs),
+						which I'm unable to disclose.
+					</p>
+				</header>
+
+
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
+						<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
+						<p style="font-size: small;"><i>2023 (one year)</i></p>
+						<p>
+							I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
+							engaging mini-games. I cannot disclose the documents.
+						</p>
+						<p>Roles: <b><font color=#1a4f63>UI/UX and 2D Artist</font> | <font color=#f06f4f>Game Design</font></b></p>
+						<p>Team composition: ~12 people</p>
+						<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
+						<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
+					</article>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+						<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+						<p style="font-size: small;"><i>Student project - 12/2018</i></p>
+						<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+						<p>Team composition: 2 people</p>
+						<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a>
+						<a href="/documents/GDD_03_Le_Maitre_de_la_Flute_en_Bois.pdf" class="button small scrolly" target="_blank">GDD</a>
+					</article>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://magiccoding.itch.io/rabbots" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
+						<h3><a href="https://magiccoding.itch.io/rabbots" target="_blank">Rabbots</a></h3>
+						<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
+						<p>
+							Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against the tyrannical
+							government that is controlled by an evil artificial intelligence.
+						</p>
+						<p>Please check out the <a href="https://drive.google.com/file/d/1u66LbpjxL7zfAGTer0tMLGdT_TMb4q4R/view?usp=sharings" target="_blank">GDD</a> and the creative process</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+						<p>Team composition: 2 people</p>
+						<a href="/documents/GDD_05_RABBOTS.pdf" class="button small scrolly" target="_blank">GDD</a>
+						<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
+
+					</article>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
+						<h3><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+						<p>Student project 2018</p>
+						<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+						<p>Team composition: 3 people</p>
+						<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a>
+					</article>
+				</div>
+
+			</div>
+				<footer>
+					<p>Do you have any questions?</p>
+					<a href="#contact" class="button large scrolly">Get in touch with me</a>
+				</footer>
+			</div>
+		</article>
 
 
 		<!-- Other prototypes -->
@@ -429,18 +509,6 @@
 							<a href="https://youtu.be/fdZ3NOz8Jj0" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="button small scrolly" target="_blank">Play</a>
 
-						</article>
-					</div>
-
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
-							<h3><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" target="_blank">Do Unicorns Eat Carrots?</a></h3>
-							<p>Student project 2018</p>
-							<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-							<p>Team composition: 3 people</p>
-							<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a>
 						</article>
 					</div>
 
@@ -713,32 +781,31 @@
 
 		<!-- Botao Scroll UP
 
-						<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
+					<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 
-						<script>
-							//Get the button
-							var mybutton = document.getElementById("myBtn");
+					<script>
+						//Get the button
+						var mybutton = document.getElementById("myBtn");
 
-							// When the user scrolls down 20px from the top of the document, show the button
-							window.onscroll = function () { scrollFunction() };
+						// When the user scrolls down 20px from the top of the document, show the button
+						window.onscroll = function () { scrollFunction() };
 
-							function scrollFunction() {
-								if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-									mybutton.style.display = "block";
-								} else {
-									mybutton.style.display = "none";
-								}
+						function scrollFunction() {
+							if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+								mybutton.style.display = "block";
+							} else {
+								mybutton.style.display = "none";
 							}
+						}
 
-							// When the user clicks on the button, scroll to the top of the document
-							function topFunction() {
-								document.body.scrollTop = 0;
-								document.documentElement.scrollTop = 0;
-							}
-						</script>
+						// When the user clicks on the button, scroll to the top of the document
+						function topFunction() {
+							document.body.scrollTop = 0;
+							document.documentElement.scrollTop = 0;
+						}
+					</script>
 
-		<End of the script for the button -->
-
+	<End of the script for the button -->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
