--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 		</article>
 
 		<!-- Portfolio GAME DESIGN -->
-		<article id="gamedesign" class="wrapper style3">
+		<article id="gamedesign" class="wrapper style4">
 			<div class="container">
 				<header>
 					<h2>Game Design</h2>
@@ -412,6 +412,18 @@
 
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
+						<a href="/documents/GDD_01_SpotterZ.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
+						<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+						<p>Student project 2018</p>
+						<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+						<p>Team composition: 3 people</p>
+						<center><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a></center>
+					</article>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
 						<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 						<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
 						<p style="font-size: small;"><i>Student project - 12/2018</i></p>
@@ -425,15 +437,14 @@
 
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://magiccoding.itch.io/rabbots" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
-						<h3><a href="https://magiccoding.itch.io/rabbots" target="_blank">Rabbots</a></h3>
+						<a href="/documents/GDD_05_RABBOTS.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
+						<h3><a href="/documents/GDD_05_RABBOTS.pdf" target="_blank">Rabbots</a></h3>
 						<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
 						<p>
-							Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against the tyrannical
-							government that is controlled by an evil artificial intelligence.
+							Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against
+							the tyrannical government that is controlled by an evil artificial intelligence.
 						</p>
-						<p>Please check out the <a href="https://drive.google.com/file/d/1u66LbpjxL7zfAGTer0tMLGdT_TMb4q4R/view?usp=sharings" target="_blank">GDD</a> and the creative process</p>
-						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+						<p>Roles: <b><font color=#1a4f63>2D Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 						<p>Team composition: 2 people</p>
 						<a href="/documents/GDD_05_RABBOTS.pdf" class="button small scrolly" target="_blank">GDD</a>
 						<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
@@ -449,15 +460,9 @@
 						<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
 						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 						<p>Team composition: 3 people</p>
-						<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a>
+						<center><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a></center>
 					</article>
 				</div>
-
-			</div>
-				<footer>
-					<p>Do you have any questions?</p>
-					<a href="#contact" class="button large scrolly">Get in touch with me</a>
-				</footer>
 			</div>
 		</article>
 
