--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Home</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#portfolio">Art</a></li>
+				<li><a href="#gamedesign">Game Design</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#blog">Blog</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -65,7 +66,7 @@
 		<article id="portfolio" class="wrapper style3">
 			<div class="container">
 				<header>
-					<h2>Portfolio</h2>
+					<h2>Art Work</h2>
 					<p>These are some of my featured projects. They are professional or personal projects, and many of them are from game jams.</p>
 				</header>
 
@@ -378,7 +379,7 @@
 		</article>
 
 		<!-- Portfolio GAME DESIGN -->
-		<article id="gamedesign" class="wrapper style3">
+		<article id="gamedesign" class="wrapper style5">
 			<div class="container">
 				<header>
 					<h2>Game Design</h2>
@@ -485,7 +486,7 @@
 
 
 		<!-- Other prototypes -->
-		<article id="other-prototypes" class="wrapper style5">
+		<article id="other-prototypes" class="wrapper style3">
 			<div class="container">
 				<header>
 					<h2>Other Prototypes</h2>
@@ -573,7 +574,7 @@
 
 
 		<!-- SKILLS  -->
-		<article id="skills" class="wrapper style3">
+		<article id="skills" class="wrapper style5">
 			<div class="container">
 				<header>
 					<h2>Main Skills</h2>
@@ -671,7 +672,7 @@
 
 		</article>
 		<!-- Blog -->
-		<article id="blog" class="wrapper style6">
+		<article id="blog" class="wrapper style3">
 			<div class="container">
 				<header><h2>Blog</h2></header>
 				<div class="row aln-center">
@@ -768,6 +769,7 @@
 			<footer>
 				<div class="container" style="align-content: center; contain">
 					<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+					<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 				</div>
 
 				<ul id="copyright">
