--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<article id="top" class="wrapper style4">
 			<div class="container">
-				<p style="font-size: x-large; text-align: center; align-content: center; color:#242424">
+				<p style="font-size: x-large; text-align: center; align-content: center; color:#ffffff">
 					“Games are legitimate forms of media, human expression, and cultural importance”<br>
 					― Mary Flanagan, Critical Play: Radical Game Design
 				</p>
@@ -412,11 +412,10 @@
 						<article class="box style2">
 							<a href="/documents/GDD_01_SpotterZ.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
 							<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">Do Unicorns Eat Carrots?</a></h3>
-							<p>Student project 2018</p>
-							<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-							<p>Team composition: 3 people</p>
-							<center><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a></center>
+							<p>Professional Projet</p>
+							<p>Crafted for <a href="https://www.jeux-geographiques.com/" target="_blank">JeuxGeo.net</a>, this 16-page Game Design Document (GDD) encapsulates the entire concept for their upcoming project.</p>
+							<p>Roles: <b><font color=#f06f4f>Game Design</font></b></p>
+							<center><a href="/documents/GDD_01_SpotterZ.pdf" class="button small scrolly" target="_blank">GDD</a></center>
 						</article>
 					</div>
 
