--- a/index.html
+++ b/index.html
@@ -397,9 +397,8 @@
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023 (one year)</i></p>
-							<p>
-								I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
-								engaging mini-games. I cannot disclose the documents.
+							<p>I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
+								engaging mini-games. Unfortunately, I cannot disclose the documents.
 							</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D Artist</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: ~12 people</p>
@@ -410,10 +409,10 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="/documents/GDD_01_SpotterZ.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
-							<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+							<a href="/documents/GDD_01_SpotterZ.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jeuxgeo.png" alt="SpotterZ" /></a>
+							<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">SpotterZ by Jeux & Co</a></h3>
 							<p>Professional Projet</p>
-							<p>Crafted for <a href="https://www.jeux-geographiques.com/" target="_blank">JeuxGeo.net</a>, this 16-page Game Design Document (GDD) encapsulates the entire concept for their upcoming project.</p>
+							<p>Crafted for <a href="https://www.jeuxandco.com/" target="_blank">Jeu & Co</a>, this 16-page Game Design Document (GDD) encapsulates the entire concept for their upcoming project.</p>
 							<p>Roles: <b><font color=#f06f4f>Game Design</font></b></p>
 							<center><a href="/documents/GDD_01_SpotterZ.pdf" class="button small scrolly" target="_blank">GDD</a></center>
 						</article>
@@ -424,7 +423,7 @@
 							<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 							<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
 							<p style="font-size: small;"><i>Student project - 12/2018</i></p>
-							<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
+							<p>This project explores Procedural Rhetoric, leaning towards an art game. The GDD is available only in French</p>
 							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 							<p>Team composition: 2 people</p>
 							<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a>
@@ -434,12 +433,12 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="/documents/GDD_05_RABBOTS.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
+							<a href="/documents/GDD_05_RABBOTS.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="Rabbots" /></a>
 							<h3><a href="/documents/GDD_05_RABBOTS.pdf" target="_blank">Rabbots</a></h3>
 							<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
-							<p>
-								Sick and tired of getting job refusals because of his “non-compliant” status,  Nio  wears a rabbit mask and goes against
-								the tyrannical government that is controlled by an evil artificial intelligence.
+							<p>In this GDD, the theme of Artificial Intelligence permeates every aspect. From mechanics to system designs, level 
+							design situations, and gameplay loops, everything is intricately woven around this central theme. It offers a 
+							comprehensive glimpse into the structure and depth of my GDDs.
 							</p>
 							<p>Roles: <b><font color=#1a4f63>2D Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 							<p>Team composition: 2 people</p>
