--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023 (one year)</i></p>
-							<p>I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
+							<p>
+								I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
 								engaging mini-games. Unfortunately, I cannot disclose the documents.
 							</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D Artist</font> | <font color=#f06f4f>Game Design</font></b></p>
@@ -436,9 +437,10 @@
 							<a href="/documents/GDD_05_RABBOTS.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="Rabbots" /></a>
 							<h3><a href="/documents/GDD_05_RABBOTS.pdf" target="_blank">Rabbots</a></h3>
 							<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
-							<p>In this GDD, the theme of Artificial Intelligence permeates every aspect. From mechanics to system designs, level 
-							design situations, and gameplay loops, everything is intricately woven around this central theme. It offers a 
-							comprehensive glimpse into the structure and depth of my GDDs.
+							<p>
+								In this GDD, the theme of Artificial Intelligence permeates every aspect. From mechanics to system designs, level
+								design situations, and gameplay loops, everything is intricately woven around this central theme. It offers a
+								comprehensive glimpse into the structure and depth of my GDDs.
 							</p>
 							<p>Roles: <b><font color=#1a4f63>2D Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 							<p>Team composition: 2 people</p>
@@ -454,14 +456,14 @@
 							<h3><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" target="_blank">Unusual Adeventure - Level Design</a></h3>
 							<p>Student project - 01/2020</p>
 							<p>
-								I've created the whole map of a fantasy RPG game, including quests and the ideal paths that the players may take. The level design is entirely explained in the Unusual Adventure's GDD.
+								I've created the whole map of a fantasy RPG game, including quests and the ideal paths that the players may take.
+								The level design is entirely explained in the Unusual Adventure's GDD.
 							</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game & Level Design</font></b></p>
+							<p>Roles: <font color=#f06f4f>Game & Level Design</font></b></p>
 							<p>Solo project</p>
 							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
 							<center>
-								<a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" class="button small scrolly" target="_blank">GDD</a>
-								<a href="/documents/Unusual_Adventures_Maps.pdf" class="button small scrolly" target="_blank">Maps</a>
+								<a href="/documents/GDD_02_Unusual Adventure.pdf" class="button small scrolly" target="_blank">GDD</a>
 							</center>
 
 						</article>
@@ -478,6 +480,30 @@
 							<center><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a></center>
 						</article>
 					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/chickenout.png" alt="Mooi" /></a>
+							<h3><a href="ADD MORE INFO" target="_blank">Chicken Out</a></h3>
+							<p>Student project - 12/2019</p>
+							<p>
+								Chicken Out is an experimental game where two players can either fight against each other or they can work together in order to survive. We have
+								used an alternative controller for this project, so we could apply a gestural rhetoric that matches the gameplay, accentuating even more the immersion. Read our concise GDD (powerpoint version) for more.
+							</p>
+							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Team composition: 3 people</p>
+							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
+							<center>
+								<a href="documents/GDD_04_Chicken_Out.pdf" class="button small scrolly" target="_blank">GDD</a>
+								<a href="https://nielisson.itch.io/chicken-out" class="button small scrolly" target="_blank">Play</a>
+							</center>
+
+						</article>
+					</div>
+
+
+
+
 				</div>
 			</div>
 		</article>
@@ -543,26 +569,6 @@
 							<p>Team composition: 3 people</p>
 							<a href="https://www.youtube.com/watch?time_continue=201&v=Nzv5QnBSpis&feature=emb_logo" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://nielisson.itch.io/mooi" class="button small scrolly" target="_blank">Play</a>
-
-						</article>
-					</div>
-
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/chickenout.png" alt="Mooi" /></a>
-							<h3><a href="ADD MORE INFO" target="_blank">Chicken Out</a></h3>
-							<p>Student project - 12/2019</p>
-							<p>
-								Chicken Out is an experimental game where two players can either fight against each other or they can work together in order to survive. We have
-								used an alternative controller for this project, so we could apply a gestural rhetoric that matches the gameplay, accentuating even more the immersion. Read our concise GDD (powerpoint version) for more.
-							</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-							<p>Team composition: 3 people</p>
-							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
-							<center>
-								<a href="documents/Presentation_chicken_Out.pdf" class="button small scrolly" target="_blank">Learn +</a>
-								<a href="https://nielisson.itch.io/chicken-out" class="button small scrolly" target="_blank">Play</a>
-							</center>
 
 						</article>
 					</div>
