--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 						<article class="box style2">
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
-							<p style="font-size: small;"><i>2023 (one year)</i></p>
+							<p style="font-size: small;"><i>Professional Project</i></p>
 							<p>
 								I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
 								engaging mini-games. Unfortunately, I cannot disclose the documents.
