--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
 							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
 							<center>
 								<a href="/documents/GDD_02_Unusual Adventure.pdf" class="button small scrolly" target="_blank">GDD</a>
+								<a href="/documents/LD_01_Unusual_Adventures_Maps.pdf" class="button small scrolly" target="_blank">Level Design</a>
 							</center>
 
 						</article>
