--- a/index.html
+++ b/index.html
@@ -595,11 +595,10 @@
 							<br>
 							<p align="justify">
 								Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools
-								needed to create a coherent and meaningful design for different genres of games. I am well acquainted with the "coziness" concept and the
+								needed to create a coherent and meaningful design for different genres of games. I am also acquainted with the "coziness" concept and the
 								procedural rhetoric which I have studied in depth throughout my academic years.
 							</p>
 							<ul>
-								<li>Featured <a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing" target="_blank">Game Design Documents</a></li>
 								<li>Article: <a href="https://www.gamedeveloper.com/audio/game-jam-survival-kit" target="_blank">Game Jam Survival Kit</a></li>
 								<li><a href="https://itch.io/jams/hosted-by-nielisson" target="_blank">Game Jams </a>I hosted</li>
 
@@ -617,7 +616,7 @@
 								I have extensive experience working with Unity, having developed most of
 								my games on this platform. In addition to being proficient with its standard features, I
 								am also skilled in utilizing its advanced tools such as Pro Builder, Tilemap system, Post
-								Processing, and the particle system. Moreover, my proficiency in C# programming enables me
+								Processing, and the particle system. While programming is not my primary expertise, my proficiency in C# programming enables me
 								to collaborate seamlessly with the programming team. These technical skills, combined with
 								my ability to work both independently and as part of a team, allow me to communicate
 								effectively and deliver high-quality work.
