--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 								<h3>Softwares, Tools and More</h3>
 								<ul>
 									<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator and Dragon Bones</li>
-									<li><b>3D art:</b> Blender and Substance Painter</li>
+									<li><b>3D art:</b> Blender and ArmorPaint</li>
 									<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
 									<li><b>Game engines:</b> Unity and Unreal Engine</li>
 									<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript (basic)</li>
