--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
-							<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+							<a href="/documents/GDD_03_Le_Maitre_de_la_Flute_en_Bois.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+							<h3><a href="/documents/GDD_03_Le_Maitre_de_la_Flute_en_Bois.pdf" target="_blank">Le maître de la flûte en bois</a></h3>
 							<p style="font-size: small;"><i>Student project - 12/2018</i></p>
 							<p>This project explores Procedural Rhetoric, leaning towards an art game. The GDD is available only in French</p>
 							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
@@ -452,8 +452,8 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/map.png" alt="Level Design" /></a>
-							<h3><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" target="_blank">Unusual Adeventure - Level Design</a></h3>
+							<a href="/documents/GDD_02_Unusual Adventure.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/map.png" alt="Level Design" /></a>
+							<h3><a href="/documents/GDD_02_Unusual Adventure.pdf" target="_blank">Unusual Adeventure - Level Design</a></h3>
 							<p>Student project - 01/2020</p>
 							<p>
 								I've created the whole map of a fantasy RPG game, including quests and the ideal paths that the players may take.
