--- a/index.html
+++ b/index.html
@@ -472,13 +472,13 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
-							<h3><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+							<a href="/documents/DoUnicornsEatCarrots.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
+							<h3><a href="/documents/DoUnicornsEatCarrots.pdf" target="_blank">Do Unicorns Eat Carrots?</a></h3>
 							<p>Student project 2018</p>
 							<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
 							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: 3 people</p>
-							<center><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a></center>
+							<center><a href="/documents/DoUnicornsEatCarrots.pdf" class="button small scrolly" target="_blank">Read the rule book</a></center>
 						</article>
 					</div>
 
