--- a/Details1.html
+++ b/Details1.html
@@ -42,10 +42,10 @@
 								<h3>Interesting stuff</h3>
 								<div class="grid">
 									<div class="row gtr-50">
-										<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
 									</div>
 								</div>
 								<a href="#" class="button icon fa-file-alt">More</a>
